<resources>
    <string name="app_name">Translator</string>
    <string name="enter_translate">Enter To Translate</string>
    <string name="translate">Translate</string>
    <string name="translated_text">Translated Text</string>
    <string name="title_activity_settings2">SettingsActivity2</string>

    <!-- Preference Titles -->
    <string name="messages_header">Messages</string>
    <string name="sync_header">Sync</string>

    <!-- Messages Preferences -->
    <string name="signature_title">Your signature</string>
    <string name="reply_title">Default reply action</string>

    <!-- Sync Preferences -->
    <string name="sync_title">Sync email periodically</string>
    <string name="attachment_title">Download incoming attachments</string>
    <string name="attachment_summary_on">Automatically download attachments for incoming emails
    </string>
    <string name="attachment_summary_off">Only download attachments when manually requested</string>


    <string name="translated_text_hint">Translated text</string>
    <string name="downloaded_models_label">Downloaded models: %1$s</string>
    <string name="translate_progress">Translating&#8230;</string>
    <string name="delete_model">Delete Model</string>
    <string name="download_model">Download Model</string>
    <string name="unknown_error">Unknown error occurred.</string>
    <string name="source_text_hint">Source text</string>
    <string name="ocr">OCR</string>
    <string name="offline_ocr">Offline OCR</string>
    <string name="meanings">Meanings</string>
    <string name="dialog_trans">Dialog Trans</string>
    <string name="light_theme">Light Theme</string>
    <string name="settings_options">Settings Options</string>
    <string name="share">Share</string>
    <string name="clipboard_empty_message">ClipBoard is Empty.</string>
    <string name="providers">Providers</string>
    <string name="speak_now">Speak Now ...</string>
</resources>