<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <include
        android:id="@+id/include"
        layout="@layout/bottom_navigation" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/textInputLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:minHeight="80dp"
        android:layout_margin="8dp"
        app:boxCornerRadiusBottomEnd="18dp"
        app:boxCornerRadiusBottomStart="18dp"
        app:boxCornerRadiusTopEnd="18dp"
        app:boxCornerRadiusTopStart="18dp"
        app:endIconMode="clear_text"
        android:hint="@string/enter_translate"
        app:hintTextColor="@color/Twit"
        app:startIconDrawable="@drawable/translate_ic"
        app:layout_constraintBottom_toTopOf="@+id/sourceLangSelector"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/sourceText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:minHeight="80dp"
            android:freezesText="true"
            android:maxLines="6" />
    </com.google.android.material.textfield.TextInputLayout>

    <Spinner
        android:id="@+id/sourceLangSelector"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        android:textAlignment="center"
        app:layout_constraintBottom_toTopOf="@id/buttonSyncSource"
        app:layout_constraintEnd_toStartOf="@id/buttonSwitchLang"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textInputLayout" />

    <com.google.android.material.button.MaterialButton
        android:paddingStart="35dp"
        app:strokeColor="@color/Twit"
        android:id="@+id/buttonSwitchLang"
        style="@style/Widget.Material3.Button.OutlinedButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        app:icon="@drawable/ic_compare_arrows"
        app:layout_constraintEnd_toStartOf="@+id/targetLangSelector"
        app:layout_constraintStart_toEndOf="@+id/sourceLangSelector"
        app:layout_constraintTop_toTopOf="@id/sourceLangSelector"
        tools:ignore="RtlSymmetry" />

    <Spinner
        android:id="@+id/targetLangSelector"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        android:textAlignment="center"
        app:layout_constraintBottom_toBottomOf="@id/sourceLangSelector"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/buttonSwitchLang"
        app:layout_constraintTop_toTopOf="@id/sourceLangSelector" />

    <ToggleButton
        android:id="@+id/buttonSyncSource"
        style="@style/Widget.MaterialComponents.Button.TextButton"
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        android:textOff="@string/download_model"
        android:textOn="@string/delete_model"
        android:textSize="11sp"
        app:layout_constraintBottom_toTopOf="@id/downloadedModels"
        app:layout_constraintEnd_toEndOf="@+id/sourceLangSelector"
        app:layout_constraintStart_toStartOf="@id/sourceLangSelector"
        app:layout_constraintTop_toBottomOf="@id/sourceLangSelector" />

    <ToggleButton
        android:id="@+id/buttonSyncTarget"
        style="@style/Widget.MaterialComponents.Button.TextButton"
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        android:textOff="@string/download_model"
        android:textOn="@string/delete_model"
        android:textSize="11sp"
        app:layout_constraintBottom_toBottomOf="@id/buttonSyncSource"
        app:layout_constraintEnd_toEndOf="@id/targetLangSelector"
        app:layout_constraintStart_toStartOf="@id/targetLangSelector"
        app:layout_constraintTop_toTopOf="@id/buttonSyncSource" />

    <TextView
        android:id="@+id/downloadedModels"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        android:gravity="center"
        android:text="@string/downloaded_models_label"
        app:layout_constraintBottom_toTopOf="@id/targetText"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/buttonSyncSource" />

    <TextView
        android:id="@+id/targetText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        android:gravity="top"
        android:hint="@string/translated_text_hint"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/downloadedModels" />


</androidx.constraintlayout.widget.ConstraintLayout>
