<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/container"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity1">

    <include
        android:id="@+id/include2"
        layout="@layout/bottom_navigation" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/inputText"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:minHeight="68dp"
        android:layout_marginStart="10dp"
        android:layout_marginTop="12dp"
        android:layout_marginEnd="10dp"
        android:hint="@string/enter_translate"
        app:boxCornerRadiusBottomEnd="18dp"
        app:boxCornerRadiusBottomStart="18dp"
        app:boxCornerRadiusTopEnd="18dp"
        app:boxCornerRadiusTopStart="18dp"
        app:endIconMode="clear_text"
        app:hintTextColor="@color/Twit"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/languageSpinner"
        app:layout_constraintTop_toTopOf="parent"
        app:startIconDrawable="@drawable/translate_ic">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/editInputText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:minHeight="68dp"
            android:maxLines="2"
            android:inputType="text" />


    </com.google.android.material.textfield.TextInputLayout>

    <Spinner
        android:id="@+id/languageSpinner"
        style="@style/PopupMenu"
        android:layout_width="103dp"
        android:layout_height="50dp"
        android:layout_marginStart="10dp"
        android:layout_marginTop="20dp"
        android:background="@drawable/spinner_bg_ic"
        android:entries="@array/LangArray"
        android:padding="8dp"
        android:spinnerMode="dropdown"
        android:textColor="@color/black"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


    <ScrollView
        android:id="@+id/scrollMenu"
        android:layout_width="80dp"
        android:layout_height="100dp"
        android:layout_below="@+id/languageSpinner"
        android:layout_marginStart="-15dp"
        android:layout_marginTop="25dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/inputText">

        <com.google.android.material.appbar.MaterialToolbar
            android:id="@+id/toolsMenu"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?attr/textAppearanceListItemSmall"
            app:menu="@menu/tools_menu"
            app:titleTextColor="@color/black" />
    </ScrollView>

    <TextView
        android:id="@+id/translatedText"
        android:layout_width="0dp"
        android:layout_height="90dp"
        android:maxLines="3"
        android:layout_marginStart="5dp"
        android:layout_marginTop="15dp"
        android:layout_marginEnd="70dp"
        android:background="@drawable/line_border"
        android:padding="8dp"
        android:textSize="17sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/scrollMenu"
        app:layout_constraintTop_toBottomOf="@id/inputText" />

    <com.google.android.material.materialswitch.MaterialSwitch
        android:id="@+id/dictionarySwitch"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:layout_marginEnd="10dp"
        android:text="@string/meanings"
        android:textSize="11sp"
        app:layout_constraintBottom_toTopOf="@id/ocrButton"
        app:layout_constraintEnd_toStartOf="@+id/translateButton"
        app:layout_constraintTop_toBottomOf="@id/translatedText" />

    <Button
        android:id="@+id/translateButton"
        android:layout_width="128dp"
        android:layout_height="60dp"
        android:layout_marginTop="20dp"
        android:background="@drawable/button_3d_background"
        android:text="@string/translate"
        android:textColor="@color/black"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/translatedText" />


    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/transProvidersSpinner"
        app:boxBackgroundColor="@android:color/transparent"
        app:boxBackgroundMode="outline"
        app:boxCornerRadiusBottomEnd="16dp"
        app:boxCornerRadiusBottomStart="16dp"
        app:boxCornerRadiusTopEnd="16dp"
        app:boxCornerRadiusTopStart="16dp"
        app:hintTextColor="@color/Twit"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.ExposedDropdownMenu"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.98"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/translatedText">

        <AutoCompleteTextView
            android:id="@+id/transProvidersAutoComplete"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/providers"
            android:inputType="none"
            android:padding="10dp" />


    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.materialswitch.MaterialSwitch
        android:id="@+id/switchOcr"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:layout_marginEnd="30dp"
        android:text="@string/offline_ocr"
        android:textSize="11sp"
        app:layout_constraintEnd_toStartOf="@+id/ocrButton"
        app:layout_constraintTop_toBottomOf="@id/translateButton" />

    <Button
        android:id="@+id/ocrButton"
        android:layout_width="88dp"
        android:layout_height="55dp"
        android:layout_marginTop="20dp"
        android:background="@drawable/line_border"
        android:text="@string/ocr"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/translateButton" />

    <View
        android:id="@+id/view"
        android:layout_width="0dp"
        android:layout_height="1dp"
        android:layout_marginStart="18dp"
        android:layout_marginTop="25dp"
        android:layout_marginEnd="18dp"
        android:background="@color/Twit"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/ocrButton" />

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="15dp"
        android:layout_marginEnd="20dp"
        android:layout_marginBottom="90dp"
        android:background="@drawable/line_border"
        android:padding="5dp"
        android:src="@drawable/translate_ic"
        app:layout_constraintBottom_toBottomOf="@+id/include2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/view"
        app:layout_constraintVertical_bias="0.0" />

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/fabCancel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/ic_cancel"
        android:visibility="gone"
        app:backgroundTint="@android:color/transparent"
        app:fabSize="normal"
        app:layout_anchor="@id/imageView"
        app:layout_anchorGravity="bottom|end"
        app:layout_constraintBottom_toBottomOf="@+id/imageView"
        app:layout_constraintEnd_toEndOf="@id/imageView"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/imageView"
        app:layout_constraintTop_toTopOf="@id/imageView"
        app:layout_constraintVertical_bias="0.01"
        app:tint="@color/Twit" />

</androidx.constraintlayout.widget.ConstraintLayout>